Added input tag

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <option value="Animal">Animal</option>
     </select>
     <main>
+        <input type="text" class="user" tabindex="-1">
         <div class="han">
             <p class="show" contenteditable="true"></p>
             <div>
