--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
         <input type="text" class="user" tabindex="-1">
         <div class="han">
-            <p class="show" contenteditable="true"></p>
+            <p class="show"></p>
             <div>
                 <span>Your Previously guessed letter:</span><span class="prev"></span>
             </div>
