--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <option value="Animal">Animal</option>
     </select>
     <main>
-        <input type="text" class="user" tabindex="-1">
+        <input type="text" class="user" tabindex="-1" placeholder="Enter the letter">
         <div class="han">
             <p class="show"></p>
             <div>
